--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,10 +27,10 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Build imagem Docker
-        run: docker build -t delivery-tech:latest .
+        run: docker build -t delivery-api:latest .
 
       - name: Rodar container para testes de integração
-        run: docker run -d --name delivery-tech-test -p 8080:8080 delivery-tech:latest
+        run: docker run -d --name delivery-api-test -p 8080:8080delivery-api:latest
 
       - name: Esperar aplicação subir
         run: |
@@ -47,7 +47,7 @@ jobs:
         run: curl -f http://localhost:8080/actuator/health
 
       - name: Parar container de teste
-        run: docker stop delivery-tech-test
+        run: docker stop delivery-api-test
 
       - name: Salvar logs do pipeline
         run: |
